completed AuthController / matched it  with the project structure